--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -37,6 +37,9 @@
             <a class="nav-link text-light" href="/saved_plans">Saved Plans</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link text-light" href="/account-settings">Account Settings</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link text-light" href="/logout">Logout</a>
           </li>
           {% else %}
