--- a/website/templates/logged_plans.html
+++ b/website/templates/logged_plans.html
@@ -10,12 +10,60 @@
     {% if logged_weeks %}
       <ul class="list-group mt-2">
         {% for week in logged_weeks %}
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-            Week starting {{ week.start_date }}
-            <a href="{{ url_for('log_routes.view_logged_week', week_id=week.id) }}" class="btn btn-sm btn-outline-primary">View</a>
-          </li>
-        {% endfor %}
-      </ul>
+        <div class="card mt-3">
+            <div class="card-header d-flex justify-content-between align-items-center">
+              <span>Week starting {{ week.start_date }}</span>
+              <div class="d-flex gap-2">
+                <button class="btn btn-sm btn-outline-secondary" data-bs-toggle="collapse" data-bs-target="#week{{ week.id }}">
+                  Toggle
+                </button>
+                <form method="POST" action="{{ url_for('log_routes.delete_logged_week', week_id=week.id) }}" onsubmit="return confirm('Are you sure you want to delete this week?')">
+                  <button type="submit" class="btn btn-sm btn-outline-danger">Delete</button>
+                </form>
+              </div>
+            </div>
+            <div id="week{{ week.id }}" class="collapse show card-body">
+              {% for day in week.logged_days %}
+                <h6 class="mt-3">{{ day.saved_day.day_name }}</h6>
+                <ul>
+                  {% for exercise in day.logged_exercises %}
+                    <li>
+                      {{ exercise.name }}
+                      {% if exercise.sets %}
+                        <ul>
+                          {% for s in exercise.sets %}
+                            <li>{{ s.reps }} reps @ {{ s.weight }} lbs</li>
+                          {% endfor %}
+                        </ul>
+                      {% endif %}
+                    </li>
+                  {% endfor %}
+                </ul>
+              {% endfor %}
+            </div>
+          </div>
+          
+          <div id="week{{ week.id }}" class="collapse show card-body">
+            {% for day in week.logged_days %}
+              <h6 class="mt-3">{{ day.saved_day.day_name }}</h6>
+              <ul>
+                {% for exercise in day.logged_exercises %}
+                  <li>
+                    {{ exercise.name }}
+                    {% if exercise.sets %}
+                      <ul>
+                        {% for s in exercise.sets %}
+                          <li>{{ s.reps }} reps @ {{ s.weight }} lbs</li>
+                        {% endfor %}
+                      </ul>
+                    {% endif %}
+                  </li>
+                {% endfor %}
+              </ul>
+            {% endfor %}
+          </div>
+        </div>
+      {% endfor %}
     {% else %}
       <p>No logged weeks yet. Start by logging a new week.</p>
     {% endif %}
