--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -37,7 +37,7 @@
             <a class="nav-link text-light" href="/saved_plans">Saved Plans</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-light" href="/logged_plans">Logged Plans</a>
+            <a class="nav-link text-light" href="/logged_plans">Workout Logs</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-light" href="/account-settings">Account Settings</a>
