Progression Visualization start

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -40,6 +40,9 @@
             <a class="nav-link text-light" href="/logged_plans">Workout Logs</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link text-light" href="/progress">Progression</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link text-light" href="/account-settings">Account Settings</a>
           </li>
           <li class="nav-item">
