--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -34,6 +34,9 @@
             <a class="nav-link active text-light" href="/">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link text-light" href="/generator">Create Plan</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link text-light" href="/saved_plans">Saved Plans</a>
           </li>
           <li class="nav-item">
